Disable page zoom through control+scroll on Mac.

I accidentally enabled this on Mac in r181965. However on Mac this has an unintended consequence of changing the page zoom when the user starts inertial scrolling and presses control right after.

BUG=178972

Review URL: https://codereview.chromium.org/14327014

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@194942 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: bccc447dceff715b81fd5c4e965877ee20b6f7bb